--- a/love/index.html
+++ b/love/index.html
@@ -1,110 +1,1 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>love line with Mrs.Right</title>
-
-<style type="text/css">
-@font-face {
-	font-family: digit;
-	src: url('digital-7_mono.ttf') format("truetype");
-}
-</style>
-
-<link href="css/default.css" type="text/css" rel="stylesheet">
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/garden.js"></script>
-<script type="text/javascript" src="js/functions.js"></script>
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32-next.png?v=6.3.0">
-
-</head>
-
-<body>
-
-<!-- <embed src="http://p3qhnc0eg.bkt.clouddn.com/U%20are%20so%20beautiful.mp3" width="0" height="0" loop="-1" autostart="true"> </embed> -->
-<!-- <embed src="http://other.web.ri01.sycdn.kuwo.cn/resource/n3/19/68/2405391895.mp3" width="0" height="0" loop="-1" autostart="true"> </embed> -->
-<embed src="http://www.ytmp3.cn/down/35839.mp3" width="0" height="0" loop="true" autostart="true"> </embed>
-
-<div id="mainDiv">
-	<div id="content">
-		<div id="code">
-        	我很努力的<br />
-            要成为一个</span><br />
-            <span class="keyword">优秀的男朋友</span><br /><br />
-
-            你也很努力的<br />
-            在成为一个<br />
-            <span class="keyword">优秀的女朋友的路上</span><br /><br />
-
-            这种感觉<br />
-            真的是<br />
-             <span class="keyword">太好了</span><br /><br />
-
-            唯有梦想与好姑娘<br />
-            <span class="keyword">不可辜负</span><br /><br />
-
-             <hr />
-   			<span class="keyword">I want to say:</span><br />
-			Mrs.Right<br />
-            <span class="keyword"> I love you! </span><br />
-            -- 钟先森<br />
-
-
-		</div>
-		<div id="loveHeart">
-			<canvas id="garden"></canvas>
-			<div id="words">
-				<div id="messages">
-					相遇，相识，相恋...
-					<div id="elapseClock"></div>
-				</div>
-<!--			<div id="loveu">
-					<br/>
-					<div class="signature">- 钟先森</div>
-				</div>
--->
-			</div>
-		</div>
-	</div>
-</div>
-
-<script type="text/javascript">
-var offsetX = $("#loveHeart").width() / 2;
-var offsetY = $("#loveHeart").height() / 2 - 55;
-var together = new Date();
-
-together.setFullYear(2018, 5, 1);//1.23；3.29
-together.setHours(12);
-together.setMinutes(0);
-together.setSeconds(0);
-together.setMilliseconds(0);
-
-if (!document.createElement('canvas').getContext) {
-	var msg = document.createElement("div");
-	msg.id = "errorMsg";
-	msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+";
-	document.body.appendChild(msg);
-	$("#code").css("display", "none")
-	$("#copyright").css("position", "absolute");
-	$("#copyright").css("bottom", "10px");
-	document.execCommand("stop");
-} else {
-	setTimeout(function () {
-		startHeartAnimation();
-	}, 5000);
-
-	timeElapse(together);
-	setInterval(function () {
-		timeElapse(together);
-	}, 500);
-
-	adjustCodePosition();
-	$("#code").typewriter();
-}
-</script>
-<div style="text-align:center;clear:both">
-<p>Made for Mrs.Right, made by <a href="https://github.com/enfangzhong" target="_blank">EnfangZhong<a /></p>
-<p>Copyright © 2017 - 2019. All Rights Reserved. Designed by <a href="https://github.com/enfangzhong" target="_blank">EnfangZhong<a /> </p>
-</div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="./manifest.json"><link rel="shortcut icon" href="./favicon.ico"><title>迟曦百天纪念日！</title><link href="./static/css/main.7dc2b36a.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript">var extend=function(o){for(var a=arguments.length,n=Array(1<a?a-1:0),e=1;e<a;e++)n[e-1]=arguments[e];return Object.assign.apply(Object,[{},o].concat(n))},parseColor=function(o){return"hsla("+o.h+","+o.s+"%,"+o.l+"%,"+o.a+")"},Color=extend.bind(null,{h:0,s:100,l:100,a:1}),Vector=extend.bind(null,{x:0,y:0}),Particle=extend.bind(null,{pos:Vector(),vel:Vector(),angle:0,speed:0,radius:0,rotation:0,color:Color()}),colors=[Color({h:20,s:100,l:50}),Color({h:200,l:50}),Color({h:300,l:50}),Color({h:100,l:40})],animationLoop=function o(a){a.animation&&a.animation(o.bind(null,a));var n=a.ctx,e=n.canvas,r=rough.canvas(e);n.clearRect(0,0,e.width,e.height),a.particles.map(function(o,a){o.pos.y-=o.speed,o.pos.x=a%2?o.pos.x+.2*Math.sin(o.angle):o.pos.x-.2*Math.cos(o.angle),o.angle+=.01,r.circle(o.pos.x,o.pos.y,o.radius,{fill:parseColor(o.color),roughness:1.5*Math.random(),hachureGap:o.hachureGap,hachureAngle:o.hachureAngle}),r.line(o.pos.x,o.pos.y+1.2*o.radius,o.pos.x,o.pos.y+o.radius/2,{bowing:3*Math.random()}),o.pos.y+3*o.radius<0&&(o.pos.y=e.height+3*o.radius,o.pos.x=Math.random()*(e.width-o.radius))})},scope={animation:requestAnimationFrame.bind(null),ctx:document.createElement("canvas").getContext("2d"),title:"Brian Douglas",rotation:0,particles:[]};!function(o){var a=o.ctx.canvas;a.width=window.innerWidth,a.height=window.innerHeight,document.body.appendChild(a);for(var n=50;n--;)o.particles.push(Particle({pos:{x:Math.random()*a.width,y:Math.random()*a.height},speed:Math.random()+.2,radius:60*Math.random()+20,color:colors[Math.floor(Math.random()*colors.length)],hachureAngle:90*Math.random(),hachureGap:8*Math.random()+1}));animationLoop(o)}(scope),/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)||window.addEventListener("resize",function(){scope.ctx.canvas.width=window.innerWidth,scope.ctx.canvas.height=window.innerHeight})</script><script type="text/javascript" src="./js/wmgwdw.js"></script><script type="text/javascript" src="./static/js/main.59c46017.js"></script></body></html>
